--- a/NeuralNetworkSequential/NeuralTicTacToe/NeuralTicTacToe/NeuralTicTacToe.vcxproj
+++ b/NeuralNetworkSequential/NeuralTicTacToe/NeuralTicTacToe/NeuralTicTacToe.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="Perceptron.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TestNetwork.h" />
     <ClInclude Include="TicTacToe.h" />
     <ClInclude Include="TicTacToeNetwork.h" />
   </ItemGroup>
@@ -93,6 +94,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestNetwork.cpp" />
     <ClCompile Include="TicTacToe.cpp" />
     <ClCompile Include="TicTacToeNetwork.cpp" />
   </ItemGroup>
