--- a/NeuralNetworkParallel/NeuralXORParallel/NeuralXORParallel/NeuralXORParallel.vcxproj
+++ b/NeuralNetworkParallel/NeuralXORParallel/NeuralXORParallel/NeuralXORParallel.vcxproj
@@ -128,6 +128,7 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>C:\Users\David\Workspace\Libraries\RapidJSON\rapidjson-master\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
