--- a/NeuralNetworkSequential/NeuralXOR/NeuralXOR/NeuralXOR/NeuralXOR.vcxproj
+++ b/NeuralNetworkSequential/NeuralXOR/NeuralXOR/NeuralXOR/NeuralXOR.vcxproj
@@ -68,6 +68,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>C:\Users\David\Workspace\Libraries\RapidJSON\rapidjson-master\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
